--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,17 +4,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@id/fragment_device_scan"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_bluetooth_searching_24"
         android:title="@string/title_app_navigation_name_device" />
 
     <item
         android:id="@id/fragment_logs"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_logs_24"
         android:title="@string/title_app_navigation_name_logs" />
 
     <item
         android:id="@id/fragment_settings"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_settings_24"
         android:title="@string/title_app_navigation_name_settings" />
 
 </menu>
