--- a/app/src/main/res/layout/fragment_app.xml
+++ b/app/src/main/res/layout/fragment_app.xml
@@ -29,8 +29,8 @@
 
     <com.example.bleframe.presentation.custom_view.CustomViewLottie
         android:id="@+id/fragment_device_lottie"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@id/fragment_device_button"
         app:layout_constraintBottom_toBottomOf="@id/fragment_device_button"
         app:layout_constraintLeft_toLeftOf="@id/fragment_device_button"
